Fix card paragraph word wrap

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header {
     background-color: #f5f5f5;
     padding: 2rem;
     position: relative;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 .content {
@@ -20,11 +21,6 @@ header {
 
 .content > .btn-add {
     margin-bottom: 2rem;
-}
-
-.content > .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 dialog{
@@ -46,4 +42,28 @@ dialog > form > input{
 
 dialog > form > .read-check {
     display: inline;
+}
+
+.content > .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    gap: 1rem;
+}
+
+.cards > .card {
+    background-color: #f5f5f5;
+    box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+    border-radius: 1rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.card > p {
+    width: 250px;
+    word-wrap: break-word;
+    text-align: center;
 }
